a bunch of messy stuff

--- a/irene.html
+++ b/irene.html
@@ -247,14 +247,14 @@
     <main>
         <style>
             img {
-              border-radius: 50%;
-              width: 150px;
-              height: 150px;
+              /* border-radius: 50%; */
+              width: 1080px;
+              height: 1920px;
+              object-fit: cover;
             
             }
             </style>
-        <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
-        <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+        <img src="images/browse/groups/rv/irene/sibpp.jfif" alt="">
         
     </main>
 
