--- a/redvelvet.html
+++ b/redvelvet.html
@@ -253,8 +253,8 @@
             
             }
             </style>
-        <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
-        <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+        <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+        <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2">
         
     </main>
 
