--- a/redvelvet.html
+++ b/redvelvet.html
@@ -250,6 +250,7 @@
               border-radius: 50%;
               width: 150px;
               height: 150px;
+              border: 5px solid #555;
             
             }
             </style>
