--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <ul class="navbar-nav">
         <li class="logo">
-          <a href="#" class="nav-link">
+          <a href="index.html" class="nav-link">
             <span class="link-text logo-text">gay sib</span>
             <svg
               aria-hidden="true"
