commented out the svgs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
         <li class="nav-item">
           <a href="index.html" class="nav-link">
-            <svg
+            <!-- <svg
               aria-hidden="true"
               focusable="false"
               data-prefix="fad"
@@ -51,7 +51,7 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 512 512"
               class="svg-inline--fa fa-cat fa-w-16 fa-9x"
-            >
+            > 
               <g class="fa-group">
                 <path
                   fill="currentColor"
@@ -64,14 +64,14 @@
                   class="fa-primary"
                 ></path>
               </g>
-            </svg>
+            </svg>-->
             <span class="link-text">Home</span>
           </a>
         </li>
   
         <li class="nav-item">
           <a href="browse.html" class="nav-link">
-            <svg
+            <!-- <svg
               aria-hidden="true"
               focusable="false"
               data-prefix="fad"
@@ -80,7 +80,7 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512"
               class="svg-inline--fa fa-alien-monster fa-w-18 fa-9x"
-            >
+            > 
               <g class="fa-group">
                 <path
                   fill="currentColor"
@@ -93,14 +93,14 @@
                   class="fa-primary"
                 ></path>
               </g>
-            </svg>
+            </svg>-->
             <span class="link-text">Browse</span>
           </a>
         </li>
   
         <li class="nav-item">
           <a href="collection.html" class="nav-link">
-            <svg
+            <!-- <svg
               aria-hidden="true"
               focusable="false"
               data-prefix="fad"
@@ -109,7 +109,7 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 512 512"
               class="svg-inline--fa fa-space-station-moon-alt fa-w-16 fa-5x"
-            >
+            > 
               <g class="fa-group">
                 <path
                   fill="currentColor"
@@ -122,14 +122,14 @@
                   class="fa-primary"
                 ></path>
               </g>
-            </svg>
+            </svg>-->
             <span class="link-text">Collection</span>
           </a>
         </li>
   
         <li class="nav-item">
           <a href="#" class="nav-link">
-            <svg
+            <!-- <svg
               aria-hidden="true"
               focusable="false"
               data-prefix="fad"
@@ -152,7 +152,7 @@
                 ></path>
               </g>
             </svg>
-            <span class="link-text">n/a</span>
+            <span class="link-text">n/a</span> -->
           </a>
         </li>
   
