--- a/browse.html
+++ b/browse.html
@@ -21,7 +21,6 @@
       padding: 20px;
       text-align: left;
     }
-
     p{
       border-radius: 25px;
       /* border: 2px solid black; */
@@ -30,9 +29,10 @@
       margin: auto;
       padding: 20px;
       text-align: left;
-      height: 0;
-      opacity: 0;
+      height: 140;
+      opacity: 100;
       transition: all 1s;
+      overflow: hidden;
     }
     p:hover{
       opacity: 1;
@@ -184,12 +184,32 @@
   <!-- page content -->
   <main>
       <h1>Browse Groups
-        <p><a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+        <p>
+          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
+          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
           <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
         </p>
       </h1>
       <h1>Browse Individuals
-        <p><a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+        <p>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
+          <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+          <a href="irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
           <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
         </p>
       </h1>
