--- a/browse.html
+++ b/browse.html
@@ -187,7 +187,7 @@
         <p>
           <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
           <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
-          <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
+          <a href="newjeans.html"><img src="images/browse/groups/nj/njlogo.png" alt="sib's dick pic 1"></a>
           <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
           <a href="redvelvet.html"><img src="images/browse/groups/rv/rvlogo.png" alt="sib's dick pic 1"></a>
           <img src="images/browse/groups/twicelogo.png" alt="sib's dick pic 2">
