started working on pcs for irene

--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
 
       <p><a href="/groups/rv/irene.html"><img src="images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
         <img src="images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+        <a href="/soloists/iu/iu.html"><img src="/images/browse/solos/iu/pfp.png" alt=""></a>
+        <a href="/groups/nj/newjeans.html"><img src="/images/browse/groups/nj/njlogo.png" alt=""></a>
       </p>
     </h1>
   </main>
