icons and stuff
added red velvet members icons and pfps
moved border radius for photocards to stylecss instead of in style section of each members html

--- a/groups/nj/haerin.html
+++ b/groups/nj/haerin.html
@@ -27,9 +27,6 @@
       text-align: left;
       opacity: 100;
     }
-    img {
-      border-radius: 5%;
-    }
     #grad1 {
         height: 200px;
         background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(201, 147, 185));
@@ -226,7 +223,7 @@
     
     <!-- page content -->
   <main>
-    <h1><a href="/groups/nj/haerin.html"><img class="pfp" src="/images/browse/groups/nj/haerin/pfp.png" width="10%" height="auto" alt=""></a> HAERIN
+    <h1><a href="/groups/nj/haerin.html"><img class="pfp" src="/images/browse/groups/nj/haerin/pfp.png" alt=""></a> HAERIN
     </h1>
     <h1>NEW JEANS BLUEBOOK VER
       <p>
