--- a/groups/rv/redvelvet.html
+++ b/groups/rv/redvelvet.html
@@ -4,12 +4,33 @@
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
   <style>
-    img {
+      img {
       border-radius: 50%;
       width: 150px;
       height: 150px;
-      border: 5px solid #555;
 
+    }
+
+    h1 {
+      font-size: 45px;
+      border-radius: 25px;
+      /* border: 2px solid black; */
+      background-color: #555;
+      /* outline: #555 solid 5px; */
+      margin: 50px;
+      padding: 20px;
+      text-align: left;
+    }
+    p{
+      border-radius: 25px;
+      /* border: 2px solid black; */
+      background-color: #555;
+      outline: #555 solid 5px;
+      margin: auto;
+      padding: 20px;
+      text-align: left;
+      height: 140;
+      opacity: 100;
     }
   </style>
 </head>
@@ -202,9 +223,21 @@
 
     <!-- page content -->
     <main>
+      <h1> RED VELVET ABOUT SECTION BLAH BLAH
+        <p>
+      <!-- <a href="/groups/nj/haerin.html"><img src="/images/browse/groups/nj/haerin/pfp.png" alt="sib's dick pic 1"></a>
+      <a href="/groups/nj/hanni.html"><img src="/images/browse/groups/nj/hanni/pfp.png" alt="sib's dick pic 2"></a> -->
+    </p>
+    </h1>
+    <h1> MEMBERS
+      <p>
       <a href="/groups/rv/irene.html"><img src="/images/browse/groups/rv/irene/pfp.png" alt="sib's dick pic 1"></a>
-      <img src="/images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2">
-
+      <a href="/groups/rv/joy.html"><img src="/images/browse/groups/rv/joy/pfp.png" alt="sib's dick pic 2"></a>
+      <a href="/groups/rv/seulgi.html"><img src="/images/browse/groups/rv/seulgi/pfp.png" alt="sib's dick pic 2"></a>
+      <a href="/groups/rv/yeri.html"><img src="/images/browse/groups/rv/yeri/pfp.png" alt="sib's dick pic 2"></a>
+      <a href="/groups/rv/wendy.html"><img src="/images/browse/groups/rv/wendy/pfp.png" alt="sib's dick pic 2"></a>
+    </p>
+    </h1>
     </main>
 
   </body>
