--- a/groups/rv/irene.html
+++ b/groups/rv/irene.html
@@ -16,7 +16,7 @@
     margin: 50px;
     padding: 20px;
     text-align: left;
-    width: auto;
+    width: fit-content;
   }
   p{
     border-radius: 25px;
@@ -226,12 +226,12 @@
 <main>
   <h1><a href="/groups/rv/irene.html"><img class="pfp" src="/images/browse/groups/rv/irene/pfp.png" width="10%" height="auto" alt=""></a> IRENE
   </h1>
-  <h1>ICE CREAM CAKE
+  <h1 class="hidden">ICE CREAM CAKE
     <p>
       <img class="pcsize" src="/images/browse/groups/nj/danielle/njbluebook/1.png" alt=""></a>
     </p>
   </h1>
-  <h1>NEW JEANS WEVERSE VER
+  <h1 class="hidden">NEW JEANS WEVERSE VER
     <p>
       <img class="pcsize" src="/images/browse/groups/nj/danielle/njweverse/1.png" alt=""></a>
       <img class="pcsize" src="/images/browse/groups/nj/danielle/njweverse/2.png" alt=""></a>
@@ -242,7 +242,7 @@
       <img class="pcsize" src="/images/browse/groups/nj/danielle/njweverse/7.png" alt=""></a>
     </p>
   </h1>
-  <h1>OMG MESSAGE CARD VER
+  <h1 class="hidden">OMG MESSAGE CARD VER
       <p>
         <img class="pcsize" src="/images/browse/groups/nj/danielle/omgmes/1.png" alt=""></a>
         <img class="pcsize" src="/images/browse/groups/nj/danielle/omgmes/2.png" alt=""></a>
@@ -252,7 +252,7 @@
         <img class="pcsize" src="/images/browse/groups/nj/danielle/omgmes/6.png" alt=""></a>
       </p>
   </h1>
-  <h1>OMG WEVERSE VER
+  <h1 class="hidden">OMG WEVERSE VER
       <p>
         <img class="pcsize" src="/images/browse/groups/nj/danielle/omgwe/1.png" alt=""></a>
         <img class="pcsize" src="/images/browse/groups/nj/danielle/omgwe/2.png" alt=""></a>
