--- a/groups/rv/irene.html
+++ b/groups/rv/irene.html
@@ -226,7 +226,7 @@
 <main>
   <h1><a href="/groups/rv/irene.html"><img class="pfp" src="/images/browse/groups/rv/irene/pfp.png" width="10%" height="auto" alt=""></a> IRENE
   </h1>
-  <h1 class="hidden">ICE CREAM CAKE
+  <h1 class="hidden">ICC
     <p>
       <img class="pcsize" src="/images/browse/groups/nj/danielle/njbluebook/1.png" alt=""></a>
     </p>
