--- a/groups/nj/minji.html
+++ b/groups/nj/minji.html
@@ -16,6 +16,7 @@
       margin: 50px;
       padding: 20px;
       text-align: left;
+      width: fit-content;
     }
     p{
       border-radius: 25px;
@@ -225,7 +226,7 @@
   <main>
     <h1><a href="/groups/nj/minji.html"><img class="pfp" src="/images/browse/groups/nj/minji/pfp.png" width="10%" height="auto" alt=""></a> MINJI
     </h1>
-    <h1>NEW JEANS BLUEBOOK VER
+    <h1 class="hidden">NEW JEANS BLUEBOOK VER
       <p>
         <img class="pcsize" src="/images/browse/groups/nj/minji/njbluebook/1.png" alt=""></a>
         <img class="pcsize" src="/images/browse/groups/nj/minji/njbluebook/2.png" alt=""></a>
@@ -236,7 +237,7 @@
         <img class="pcsize" src="/images/browse/groups/nj/minji/njbluebook/7.png" alt=""></a>
       </p>
     </h1>
-    <h1>NEW JEANS WEVERSE VER
+    <h1 class="hidden">NEW JEANS WEVERSE VER
       <p>
         <img class="pcsize" src="/images/browse/groups/nj/minji/njweverse/1.png" alt=""></a>
         <img class="pcsize" src="/images/browse/groups/nj/minji/njweverse/2.png" alt=""></a>
@@ -247,7 +248,7 @@
         <img class="pcsize" src="/images/browse/groups/nj/minji/njweverse/7.png" alt=""></a>
       </p>
     </h1>
-    <h1>OMG MESSAGE CARD VER
+    <h1 class="hidden">OMG MESSAGE CARD VER
         <p>
           <img class="pcsize" src="/images/browse/groups/nj/minji/omgmes/1.png" alt=""></a>
           <img class="pcsize" src="/images/browse/groups/nj/minji/omgmes/2.png" alt=""></a>
@@ -257,7 +258,7 @@
           <img class="pcsize" src="/images/browse/groups/nj/minji/omgmes/6.png" alt=""></a>
         </p>
     </h1>
-    <h1>OMG WEVERSE VER
+    <h1 class="hidden">OMG WEVERSE VER
         <p>
           <img class="pcsize" src="/images/browse/groups/nj/minji/omgwe/1.png" alt=""></a>
           <img class="pcsize" src="/images/browse/groups/nj/minji/omgwe/2.png" alt=""></a>
